--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git checkout -b temp-deployment && yarn build && git add -f build && git commit -m 'deployment' && git push origin $(git subtree split --prefix build master):allo -f && git checkout master && git branch -D temp-deployment",
+    "commit": "git add . && git commit -m \"Je men fiche\"",
+    "deploy": "git checkout -b temp-deployment && yarn build && git add -f build && git commit -m 'deployment' && git push --repo=origin $(git subtree split --prefix build master):allo -f && git checkout master && git branch -D temp-deployment",
     "deploy-oups": "git checkout master && git branch -D temp-deployment"
   },
   "eslintConfig": {
